--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 
 <body>
     <div class="topnav">
-        <a href="#display_menu" onclick="getmenu()">View Menu</a>
-        <a href="#add_dishes" onclick="adddishes()">Add Dishes</a>
+        <a href="#display_menu" onclick="getMenu()">View Menu</a>
+        <a href="#add_dishes" onclick="addDishes()">Add Dishes</a>
     </div>
     <br>
     <br>
     <h1>
         Restaraunt Menu
     </h1>
+    <center>
     <div class="divmenu">
         <div id="display_menu"></div>
     </div>
@@ -26,10 +27,11 @@
         <input id="item" placeholder="Type your dish here!">
         <br>
         <br>
-        <button class="adddishbutton" onclick="additem()">
+        <button class="adddishbutton" onclick="addItem()">
          Add Your Dish
         </button>
     </div>
+    </center>
 </body>
 
 </html>
